<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_novapartda"
            android:icon="@drawable/folder_plus"
            android:title="@string/novaPartida" />
        <item
            android:id="@+id/nav_tabuleiro"
            android:icon="@drawable/view_dashboard"
            android:title="@string/tabuleiro" />
        <item
            android:id="@+id/nav_perguntas"
            android:icon="@drawable/comment_question_outline"
            android:title="@string/perguntas" />
        <item
            android:id="@+id/nav_equipes"
            android:icon="@drawable/account_multiple"
            android:title="@string/equipes" />
        <item
            android:id="@+id/nav_configuracoes"
            android:icon="@drawable/settings"
            android:title="@string/configuracoes" />
        <item
            android:id="@+id/nav_encerrar"
            android:icon="@drawable/logout"
            android:title="@string/encerrar" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
