<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kaua.businessgame.TelaCadastro">

    <TextView
        android:id="@+id/tvCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:textSize="20sp"
        android:text="@string/cadastro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNomeCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/tvCadastro"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/edtNomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nome"
            android:layout_below="@+id/tvCadastro"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSenhaCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/tilNomeCad"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/edtSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/senha"
            android:layout_below="@+id/edtNomeCadastro" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilConfirmaSenhaCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/tilSenhaCad"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/edtConfirmarSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/repetirSenha"
            android:layout_below="@+id/edtSenhaCadastro"
            android:layout_alignStart="@+id/edtSenhaCadastro"
            android:layout_alignEnd="@+id/edtSenhaCadastro" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tilConfirmaSenhaCad"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/RbtnProfessor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/professor" />

            <RadioButton
                android:id="@+id/RbtnAluno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aluno" />
        </RadioGroup>

        <Button
            android:id="@+id/btnConfirmarCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/criarConta"
            android:background="@drawable/selector_button_gray"/>
    </LinearLayout>
</RelativeLayout>
