<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kaua.businessgame.TelaToken">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_cards"
        android:padding="30dp"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tokenAcesso"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tvCodToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="codToken"
                android:textSize="20sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lock_reset"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aguardandoParticipantes"
                android:textColor="@color/colorSecondaryDark"
                android:gravity="center"/>

            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:indeterminate="true"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuarioConectados"
            android:textColor="@color/colorSecondaryDark"
            android:gravity="center"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelarToken"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/cancelar"
                android:background="@drawable/selector_button_gray"
                android:layout_margin="2dp"/>

            <Button
                android:id="@+id/btnAvancarToken"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/avancar"
                android:textColor="@android:color/white"
                android:background="@drawable/selector_button_blue"
                android:layout_margin="2dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
