<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kaua.businessgame.tela_login">

    <TextView
        android:id="@+id/tvBemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/bemVindo"
        android:textSize="26sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvAppname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:layout_below="@+id/tvBemvindo"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="112dp"
        android:layout_below="@+id/tvAppname"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/edtRA"
            android:layout_width="match_parent"
            android:maxLength="6"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/ra"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/tilRA"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="6"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:hint="@string/senha"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilSenha"
        android:layout_marginTop="20dp"
        android:text="@string/entrar"
        android:layout_weight="0.96"
        android:layout_alignStart="@+id/tilSenha"
        android:layout_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvEsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEntrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/esqueciSenha"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastrar"
        android:layout_above="@+id/tvEsqueciSenha"
        android:layout_alignEnd="@+id/tilSenha"
        android:layout_weight="0.80"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAppname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="" />


</RelativeLayout >
